timberland.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 10168,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.63,
  "homepage_snapshot_redirected_domain": "timberland.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060407094209id_/http://www.timberland.com/home/index.jsp",
  "homepage_snapshot_url": "https://web.archive.org/web/20060403000927id_/http%3A//timberland.com",
  "interval": "2006_A",
  "link_text": "Privacy/Security Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "timberland.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615022441id_/http%3A//www.timberland.com/helpdesk/index.jsp%3Fdisplay%3Dsafety%26subdisplay%3Dprivacy%26clickid%3Dbotnav_privacy_txt",
  "policy_title": "Timberland\u00ae Customer Service",
  "policy_url": "timberland.com/helpdesk/index.jsp?display=safety&subdisplay=privacy&clickid=botnav_privacy_txt",
  "sha1": "7563f2db355a82f29b1d36757a729bc1d3a824b9",
  "simhash": 12570418610828180796,
  "simhash_updated": true,
  "site_hostname": "timberland.com",
  "site_url": "http://timberland.com",
  "smog": 14.07,
  "strict_updated": true,
  "timestamp": "20060615022441",
  "word_count": 1715,
  "year": 2006
}

--- a/t/ti/tim/timberland.com.html
+++ b/t/ti/tim/timberland.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the timberland.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228151522id_/http%3A//www.timberland.com/helpdesk/index.jsp%3Fdisplay%3Dsafety%26subdisplay%3Dprivacy%26clickid%3Dbotnav_privacy_txt) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the timberland.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615022441id_/http%3A//www.timberland.com/helpdesk/index.jsp%3Fdisplay%3Dsafety%26subdisplay%3Dprivacy%26clickid%3Dbotnav_privacy_txt) for the most accurate reproduction.-->
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 
@@ -211,8 +211,10 @@ identity.className=newClass;
 						<td><div class="mboxDefault"><a href="/customboots/index.jsp?clickid=topnav_boots_img" onmouseover="imgOn('custom','custom');" onmouseout="imgOff('custom','custom');" target="_top"><img name="custom" src="http://TBL.imageg.net/images/topnav_custom_off.gif" alt="" width="99" height="35" border="0"></a></div><script language="javascript1.2">mboxCreate('nav_dyo');</script></td>
 
 	<!-- TIMBERLAND PRO -->
-	 				<td><a href="/shop/index.jsp?categoryId=1762199&amp;clickid=topnav_timpro_img" onmouseover="imgOn('pro','pro');" onmouseout="imgOff('pro','pro');" target="_top">
-						<img name="pro" src="http://TBL.imageg.net/images/topnav_pro_off.gif" alt="" width="117" height="35" border="0"></a></td>
+	
+	 				<td><div class="mboxDefault"><a href="/shop/index.jsp?categoryId=1762199&amp;clickid=topnav_timpro_img" onmouseover="imgOn('pro','pro');" onmouseout="imgOff('pro','pro');" target="_top">
+						<img name="pro" src="http://TBL.imageg.net/images/topnav_pro_off.gif" alt="" width="117" height="35" border="0"></a></div><script language="javascript1.2">mboxCreate('pro');</script></td>
+
 	<!-- PRODUCT GUIDE -->
 
 						<td><div class="mboxDefault"><a href="/shop/index.jsp?categoryId=1779753&amp;clickid=topnav_prodguide_img" onmouseover="imgOn('pg','pg');" onmouseout="imgOff('pg','pg');" target="_top"><img name="pg" src="http://TBL.imageg.net/images/topnav_pg_off.gif" alt="" width="100" height="35" border="0"></a></div><script language="javascript1.2">mboxCreate('nav_pg');</script></td><!-- SHOPPING BAG --><td valign="middle"><a href="/cart/index.jsp?clickid=topnav_bag_img" onmouseover="imgOn('bag','bag');change('changeme', 'itemsOn');" onmouseout="imgOff('bag','bag');change('changeme', 'basicWhiteHead');" target="_top"><img name="bag" src="http://TBL.imageg.net/images/tbl_shopbag_off.gif" alt="" width="111" height="35" border="0"></a></td><td background="http://TBL.imageg.net/images/tbl_shopbag_bg.gif" align="right" valign="middle" nowrap="" width="55" style="padding-right:6px;"><img src="http://TBL.imageg.net/images/pixel.gif" width="1" height="8" alt="" border="0"><br><a href="/cart/index.jsp?clickid=topnav_bag_txt" onmouseover="imgOn('bag','bag');" onmouseout="imgOff('bag','bag');" class="basicWhiteHead" target="_top" id="changeme">0 items</a></td>
@@ -306,7 +308,7 @@ identity.className=newClass;
 	<td><img src="http://TBL.imageg.net/images/pixel.gif" width="20" height="1"></td>
 	<td valign="top"><!-- panel -->
 	<!--STOREMAN GENERATION - 1 panel(s) found for slot: HelpSlot entryId: 1320970 with pd:null-->
-<!--STOREMAN PANEL: helpdesk/tbl_privacy_policy.2975.jsp-->
+<!--STOREMAN PANEL: helpdesk/tbl_privacy_policy.21133.jsp-->
 
 			<!--?xml version="1.0" encoding="ISO-8859-1" standalone="no"?-->
 
@@ -323,7 +325,7 @@ At timberland.com, your privacy is our priority.<br><br>
 
 - We use various security measures to protect the security and confidentiality of your personal information. <br><br></b>
 
-You value your privacy. And we respect that. When you shop with timberland.com and TimberlandPRO.com, we need to collect a certain amount of information about you to make shopping easier for you--and for us. We believe that you have a right to know how we use that information and how we keep it secure. So we've answered the most frequently asked questions below. If you have any more questions about our policy, just call us at 888-802-9947, or email us at <a href="mailto:info@timberland.com" class="body">info@timberland.com</a>, or write to us at The Timberland Company, Consumer Service, 200 Domain Drive, Stratham, New Hampshire 03885. We'll get back to you as quickly as possible.
+You value your privacy. And we respect that. When you shop with timberland.com and TimberlandPRO.com, we need to collect a certain amount of information about you to make shopping easier for you--and for us. We believe that you have a right to know how we use that information and how we keep it secure. So we've answered the most frequently asked questions below. If you have any more questions about our policy, just call us at 888-802-9947, or email us at <a href="mailto:info@timberland.com?subject=Privacy Policy Questions" class="body">info@timberland.com</a>, or write to us at The Timberland Company, Consumer Service, 200 Domain Drive, Stratham, New Hampshire 03885. We'll get back to you as quickly as possible.
 <br><br>
 
 <b>What information do we collect?</b><br><br>
@@ -362,7 +364,7 @@ We share your information with our trusted third party service providers who man
 
 Now and then, we may also use third parties to help us collect and aggregate site guest and customer information. We may share this aggregated, non-personally identifiable information (such as age, clickstream visit, and product interests) with existing and prospective business partners and advertisers. None of the aggregate information will contain any information that identifies you individually.<br><br>
 
-We may also share your personal information with carefully screened Timberland business partners to offer you products and services that we believe might interest you. But only The Timberland Company, Timberland Retail, Inc., timberland.com or TimberlandPRO.com or other Timberland affiliates and business partners will send you these messages. In each case, our partners will not be authorized to discuss, disclose, or make any use of your personal information except for extending the offer to you. If you prefer not to be included in these types of propective offers, please let us know by sending an email to <a href="mailto:nointerest@timberland.com" class="body">nointerest@timberland.com</a>.<br><br>
+We may also share your personal information with carefully screened Timberland business partners to offer you products and services that we believe might interest you. But only The Timberland Company, Timberland Retail, Inc., timberland.com or TimberlandPRO.com or other Timberland affiliates and business partners will send you these messages. In each case, our partners will not be authorized to discuss, disclose, or make any use of your personal information except for extending the offer to you. If you prefer not to be included in these types of propective offers, please let us know by sending an email to <a href="mailto:nointerest@timberland.com?subject=Privacy Policy Questions" class="body">nointerest@timberland.com</a>.<br><br>
 
 If you apply for the Timberland credit card online, you provide the personal and financial information needed to process your application directly to MBNA, the issuer and the administrator of the credit card program. MBNA is independent of Timberland and has its own privacy and security policies. You can review their policies at www.mbna.com.<br><br>
 
@@ -372,7 +374,7 @@ How can you access or change your information or opt out of receiving informatio
 
 If you're a timberland.com account holder, just click "My Account" and enter your email address and password on the account Sign In page. You can review or change certain of your personal information from our website database. This includes the ability to "opt out," or indicate that you do not wish to receive email or regular mailings from us.<br><br>
 
-If you want to update your information or remove yourself from any of our email or regular mailing lists, simply email us at <a href="mailto:info@timberland.com" class="body">info@timberland.com</a>, call us at 888-802-9947 or write to us at The Timberland Company, Consumer Service, 200 Domain Drive, Stratham, New Hampshire 03885. Please note that your request to be removed from our email lists might take up to ten (10) business days to become effective (regular mailing lists may take up to 4-6 weeks). Even if you're removed from a list, if you order online, we will send you an email to confirm your order and may need to contact you by phone, email or regular mail if we have questions about your order. There will be an opportunity to unsubscribe within each promotional email that you receive from us so you can automatically remove your email address from our mailing list.<br><br>
+If you want to update your information or remove yourself from any of our email or regular mailing lists, simply email us at <a href="mailto:info@timberland.com?subject=Privacy Policy Questions" class="body">info@timberland.com</a>, call us at 888-802-9947 or write to us at The Timberland Company, Consumer Service, 200 Domain Drive, Stratham, New Hampshire 03885. Please note that your request to be removed from our email lists might take up to ten (10) business days to become effective (regular mailing lists may take up to 4-6 weeks). Even if you're removed from a list, if you order online, we will send you an email to confirm your order and may need to contact you by phone, email or regular mail if we have questions about your order. There will be an opportunity to unsubscribe within each promotional email that you receive from us so you can automatically remove your email address from our mailing list.<br><br>
 
 
 <b>How do we protect the privacy of children?</b><br><br>
@@ -400,7 +402,7 @@ last modified: May 2004
 </tbody></table>
 </smpanel>
 
-<!--END STOREMAN PANEL helpdesk/tbl_privacy_policy.2975.jsp-->
+<!--END STOREMAN PANEL helpdesk/tbl_privacy_policy.21133.jsp-->
 <!--END STOREMAN GENERATION-->
 
 		
@@ -420,7 +422,7 @@ last modified: May 2004
 		<td width="10">
 			<img src="http://TBL.imageg.net/images/pixel.gif" alt="" width="10" height="1"></td>
 		<td class="footerCopyright" width="240" valign="top">
-			<a href="../corp/index.jsp?page=trademark" class="footerCopyright">©2005 The Timberland Company. All Rights Reserved.</a></td>
+			<a href="../corp/index.jsp?page=trademark" class="footerCopyright">©2006 The Timberland Company. All Rights Reserved.</a></td>
 		<td width="5">
 			<img src="http://TBL.imageg.net/images/pixel.gif" alt="" width="5" height="1"></td>
 		<td align="right" class="footerLink2" width="503" valign="top">
@@ -431,7 +433,7 @@ last modified: May 2004
 </tbody></table><!-- END Footer -->
 
 	
-<!-- page = jsp_servlet._gsi._tbl._helpdesk.__index@64390a2-->
+<!-- page = jsp_servlet._gsi._tbl._helpdesk.__index@f3cc978-->
 <!-- SiteCatalyst code version: G.6.Copyright 1997-2004 Omniture, Inc. More info available at http://www.omniture.com --><script language="JavaScript"><!--/* You may give each page an identifying name, server, and channel on the next lines. */
 /* Custom Insight Variables */
 var s_pageName="helpdesk/index.jsp"; //page naming convention
