phpmydirectory.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 2868,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.98,
  "homepage_snapshot_redirected_domain": "phpmydirectory.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060405010414id_/http://www.phpmydirectory.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060405010414id_/http%3A//phpmydirectory.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "phpmydirectory.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615022525id_/http%3A//www.phpmydirectory.com/privacy.html",
  "policy_title": "phpMyDirectory.com - PHP/mySQL Business Directory Script - Privacy Policy",
  "policy_url": "phpmydirectory.com/privacy.html",
  "sha1": "571da0009f7af12a2e4a2d84fe1bc4add1cf381a",
  "simhash": 2214517877066470213,
  "simhash_updated": false,
  "site_hostname": "phpmydirectory.com",
  "site_url": "http://phpmydirectory.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615022525",
  "word_count": 454,
  "year": 2006
}

--- a/p/ph/php/phpmydirectory.com.html
+++ b/p/ph/php/phpmydirectory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the phpmydirectory.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218141609id_/http%3A//www.phpmydirectory.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the phpmydirectory.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615022525id_/http%3A//www.phpmydirectory.com/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "template.dwt" --><head>
 
@@ -25,7 +25,12 @@
 
  <!-- #EndEditable -->
 
-
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-401162-1";
+urchinTracker();
+</script>
 <script src="rotate.js"></script>
 
  <link rel="stylesheet" href="./css/css.css"></head>
@@ -537,10 +542,213 @@ Perfect Your Website With phpMyDirectory!<br>
 
 
 
+   <p>    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
    <br>
+    </p>
     <center>
         <br>
-        © Copyright 2001-2005        <a href="http://phpmydirectory.com">phpMyDirectory.com</a>.
+        © Copyright 2001-2006        <a href="http://phpmydirectory.com">phpMyDirectory.com</a>.
         All Rights Reserved.
        <br>
       	Powered by Accomplish Technology, LLC<br>
@@ -585,7 +793,7 @@ What People Say..<br>
 <script language="JavaScript">
 	// Where you place this is where the random object will be displayed.
 	document.write(pmd[rand(pmd.length)])	
-</script><br>&nbsp;&nbsp;I just want to let everyone know how excellent this script is! It has to be the easiest one I've ever installed - took only a few minutes! <br> &nbsp;&nbsp;Extremely easy to use and gives the "Administrator" full control of his/her site and adds a great deal of professionalism to it. The support was very fast to respond to all of my questions! I highly recommend this to anyone who is in search of the "BEST" directory script out here!!!!! <br><br><a href="http://www.OceanCityMD.biz">OceanCityMD.biz</a><br><br>Business Directory for<br>Ocean City, MD and beyond -USA<br><br>
+</script><br>&nbsp;&nbsp;phpMyDirectory has allowed us to launch and maintain efficiently TheBigLoop, a vertical search engine for marketing and advertising. It runs smoothly day in and day out and it allows sufficient customization to respond to the market demands.<br>&nbsp;&nbsp;A great product.<br>&nbsp;&nbsp;<br>&nbsp;&nbsp;Carlos Figueroa<br>&nbsp;&nbsp;<a href="thebigloop.com">thebigloop.com</a><br><br>
    </td>
   </tr>
 
