--- a/w/wh/who/wholefoodsmarket.com.html
+++ b/w/wh/who/wholefoodsmarket.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wholefoodsmarket.com privacy policy that was archived on 2005-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051225044028id_/http%3A//wholefoodsmarket.com/privacystatement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wholefoodsmarket.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615022707id_/http%3A//www.wholefoodsmarket.com/privacystatement.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Whole Foods Market : Privacy Policy</title>
@@ -18,7 +18,7 @@ _uacct = "UA-190385-1";
 urchinTracker(); 
 </script>
 
-
+<!-- Perfect Popups script provided for free by http://www.howtocreate.co.uk/perfectPopups.html -->
 <script type="text/javascript" language="javascript" src="http://www.wholefoodsmarket.com/navigation/scripts/popupimage_perfect.js"></script>
 
 <!-- script for related links drop down menu -->
@@ -28,7 +28,7 @@ urchinTracker();
 
 function openWin (url)
 {
-	var newWindow = open (url, '_blank', 'menubar=yes,scrollable=yes,resizable=yes,toolbar=yes,location=yes,directories=yes,status=1,toolbar=1,menubar=1,scrollbars=1,resizable=1');
+	var newWindow = open (url, '_blank', 'menubar=yes,scrollable=yes,resizable=yes,toolbar=yes,location=yes,directories=yes,status=1,toolbar=1,menubar=1,scrollbars=1,resizable=1,width=900,height=900');
 	//newWindow.focus ();
 	//if (document.layers)
 		//open (location, '_self')
@@ -79,7 +79,9 @@ function openWin2 (url)
 
 <td><img src="http://www.wholefoodsmarket.com/navigation/template/menu_pressroom.jpg" width="105" height="25" border="0" name="menu7" id="menu7" onmouseover="showMenu(event)" onmouseout="hideMenu(event)"></td>
 
-<td><img src="http://www.wholefoodsmarket.com/navigation/template/menu_contact.jpg" width="100" height="25" border="0" name="menu10" id="menu10" onmouseover="showMenu(event)" onmouseout="hideMenu(event)"></td>
+<!-- <TD><IMG SRC="http://www.wholefoodsmarket.com/navigation/template/menu_contact.jpg" WIDTH="100" HEIGHT="25" BORDER="0" NAME="menu10" ID="menu10" ONMOUSEOVER="showMenu(event)" ONMOUSEOUT="hideMenu(event)"></TD> -->
+
+<td><img src="/navigation/template/menu_cs.gif" width="145" height="25" border="0" name="menu10" id="menu10" onmouseover="showMenu(event)" onmouseout="hideMenu(event)"></td>
 
 <td><img src="http://www.wholefoodsmarket.com/navigation/template/menu_search.jpg" width="70" height="25" border="0" name="menu9" id="menu9" onmouseover="showMenu(event)" onmouseout="hideMenu(event)"></td>
 
@@ -264,7 +266,7 @@ This document was last updated July, 2004.  Whole Foods Market may update this p
 <td bgcolor="FFFFFF" valign="top">
 <p class="bottom"><a href="/">Home</a> : Privacy Policy</p><br>
 <center><hr width="50%">
-<p class="eightpoint">Copyright 2000–2005. Whole Foods Market IP, L.P.<br>
+<p class="eightpoint">Copyright 2000–2006. Whole Foods Market IP, L.P.<br>
 <a href="/terms.html">terms of use</a> | <a href="/privacystatement.html">privacy policy</a><br><a href="/contact/index.html">Contact Us</a> | <a href="/flavors/index.html">fl@vors email sign up</a></p></center><br><br>
 
 
