--- a/w/wh/whe/where2go.com.html
+++ b/w/wh/whe/where2go.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the where2go.com privacy policy that was archived on 2005-08-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050829212705id_/http%3A//www.where2go.com/html/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the where2go.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615022800id_/http%3A//where2go.com/html/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 FINAL//EN"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -274,9 +274,9 @@ Oak View, CA 93022
 					<td align="center" colspan="3"><img src="/gifs/red_pixel.gif" width="640" height="2"></td>
 				</tr>
 				<tr>
-					<td width="213"><font face="Arial, Helvetica" size="1">powered by: <a href="http://www.HLI.net/">HLI Systems</a></font></td>
+					<td width="213"><font face="Arial, Helvetica" size="1">powered by: <a href="http://www.flexiblelogic.com/">Flexible Logic</a></font></td>
 					<td align="center" width="213"><font face="Arial, Helvetica" size="1"><a href="/html/usage.html">Usage Policy</a> | <a href="/html/privacy.html">Privacy Policy</a></font></td>
-					<td align="right" width="214"><font face="Arial, Helvetica" size="1"><a href="/html/copyright.html">Copyright 1995-2004 • HLI Corporation</a></font></td>
+					<td align="right" width="214"><font face="Arial, Helvetica" size="1"><a href="/html/copyright.html">Copyright 1995-2006 • Flexible Logic, Inc.</a></font></td>
 				</tr>
 			</tbody></table>
 		</td>
