--- a/i/ia/iat/iata.org.html
+++ b/i/ia/iat/iata.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iata.org privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212152129id_/http%3A//www.iata.org/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iata.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023214id_/http%3A//www.iata.org/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -48,15 +48,45 @@
 
 <!-- Drop Down Menus -->
 
+<div id="eventsmenu">
+	<div id="centerlayer">
+		<div class="dropmenu" onmouseover="MM_showHideLayers('eventsmenu','','show')" onmouseout="MM_showHideLayers('eventsmenu','','hide')">
+
+			<ul>
+				<li><a href="/ps/events/agm">Annual General Meeting</a></li>
+				<li><a href="/events/calendar">Event Calendar</a></li>
+				<li><a href="/events/tradeshow/">Industry Events and Tradeshows</a></li>
+				<li><a href="/ps/services/igcc1">Geneva Conference Centre</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+
+<div id="trainingmenu">
+	<div id="centerlayer">
+		<div class="dropmenu" onmouseover="MM_showHideLayers('trainingmenu','','show')" onmouseout="MM_showHideLayers('trainingmenu','','hide')">
+			
+			<ul>
+				<li><a href="/training/calendar/">Calendar</a></li>
+				<li><a href="/training/customised">Customised Training</a></li>
+				<li><a href="/training/distance_learning">Distance Learning</a></li>
+				<li><a href="/training/elearning">E-Learning</a></li>
+				<li><a href="/training/diploma_programme/">IATA Diploma Programme</a></li>
+				<li><a href="/training/network">International Network of Schools</a></li>
+				<li><a href="/training/train_trainers">Training of Trainers</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+
 <div id="psmenu">
 	<div id="centerlayer">
 		<div class="dropmenu" onmouseover="MM_showHideLayers('psmenu','','show')" onmouseout="MM_showHideLayers('psmenu','','hide')">
-			<span class="menutitle"><a href="/ps/">Products &amp; Services</a></span>
+
 			<ul>
 				<li><a href="/ps/services/">Business Solutions</a></li>
-				<li><a href="/ps/events/">Events</a></li>
+				<li><a href="/ps/consulting/">Consulting</a></li>
 				<li><a href="/ps/publications/">Publications</a></li>
-				<li><a href="/ps/training/">Training</a></li>
 				<li><a href="http://www.iataonline.com" target="_blank">IATA Online Store</a></li>
 			</ul>
 		</div>
@@ -66,7 +96,7 @@
 <div id="aboutmenu">
 	<div id="centerlayer">
 		<div class="dropmenu" onmouseover="MM_showHideLayers('aboutmenu','','show')" onmouseout="MM_showHideLayers('aboutmenu','','hide')">
-			<span class="menutitle"><a href="/about/">About Us</a></span>
+
 			<ul>
 				<li><a href="/about/boardgovernors.htm">Board of Governors</a></li>
 				<li><a href="/about/DG_biography.htm">Director General and CEO</a></li>
@@ -83,7 +113,7 @@
 <div id="membermenu">
 	<div id="centerlayer">
 		<div class="dropmenu" onmouseover="MM_showHideLayers('membermenu','','show')" onmouseout="MM_showHideLayers('membermenu','','hide')">
-			<span class="menutitle"><a href="/membership/">Membership</a></span>
+
 			<ul>
 				<li><a href="/membership/airlines">Airlines</a></li>
 				<li><a href="/membership/travelcargo">Freight Forwarders</a></li>
@@ -97,14 +127,13 @@
 <div id="pressmenu">
 	<div id="centerlayer">
 		<div class="dropmenu" onmouseover="MM_showHideLayers('pressmenu','','show')" onmouseout="MM_showHideLayers('pressmenu','','hide')">
-			<span class="menutitle"><a href="/pressroom/">Pressroom</a></span>
 			<ul>
 				<li><a href="/pressroom/pr/">Press Releases</a></li>
 				<li><a href="/pressroom/speeches/">Speeches</a></li>
 				<li><a href="/pressroom/statements/">Statements</a></li>
 				<li><a href="/pressroom/news_briefs/">News Briefs</a></li>
 				<li><a href="/pressroom/briefs/">CEO Briefs</a></li>
-				<li><a href="/pressroom/industry_facts/">Industry Facts</a></li>
+				<li><a href="/pressroom/economics_facts/">Economics &amp; Facts</a></li>
 				<li><a href="/pressroom/DG_biography.htm">DG's Biography</a></li>
 				<li><a href="/pressroom/news/">IATA in the News</a></li>
 				<li><a href="/pressroom/Airlines_International.htm">Airlines International</a></li>
@@ -116,14 +145,15 @@
 <div id="wwdmenu">
 	<div id="centerlayer">
 		<div class="dropmenu" onmouseover="MM_showHideLayers('wwdmenu','','show')" onmouseout="MM_showHideLayers('wwdmenu','','hide')">
-			<span class="menutitle"><a href="/whatwedo/">What We Do</a></span>
+
 			<ul>			
 				<li><a href="/whatwedo/aircraft_operations">Aircraft Operations</a></li>
 				<li><a href="/whatwedo/airport_development_infrastructure">Airport Development and Infrastructure</a></li>
 				<li><a href="/whatwedo/cargo">Cargo</a></li>
+				<li><a href="/whatwedo/economics">Economics</a></li>
 				<li><a href="/whatwedo/finance">Finance</a></li>
 				<li><a href="/whatwedo/passenger">Passenger</a></li>
-				<li><a href="/whatwedo/regulatory_public_policies">Policies and Regulations</a></li>				
+				<li><a href="/whatwedo/policies">Policies and Regulations</a></li>				
 				<li><a href="/whatwedo/safety_security">Safety and Security</a></li>
 				<li><a href="/whatwedo/simplibiz">Simplifying the Business</a></li>
 			</ul>
@@ -142,7 +172,7 @@
 			
 	</div>
 </div>
-				<div id="bannerlayer"><div class="bannercenterlayer"><div id="banner" style="background: url(/NR/ContentConnector/CS2000/SiteInterface/images/2005/Channels.jpg) #FFFFFF no-repeat"></div></div></div>
+				<div id="bannerlayer"><div class="bannercenterlayer"><div id="banner" style="background: url(/NR/ContentConnector/CS2000/SiteInterface/images/2005/Channels.jpg) #FFFFFF no-repeat right"></div></div></div>
 		<div id="breadlayer"><div class="breadcenterlayer"><div id="breadcrumbs"><b><a href="/">Home</a></b></div></div></div>
 		<div id="wbc">
 		    <div class="sitemode">
@@ -152,21 +182,41 @@
 		</div>
 		
 	<div id="header">
-		<div class="logo"><a href="/index.htm"><img src="/NR/ContentConnector/CS2000/SiteInterface/images/2005/logo.gif" border="0" title="International Air Transport Association"></a></div>
+		<div class="logo"><a href="/index.htm"><img src="/NR/ContentConnector/CS2000/SiteInterface/images/2005/header_logo_light.gif" border="0" title="International Air Transport Association"></a></div>
 		<div class="logoprint"><img src="/NR/ContentConnector/CS2000/SiteInterface/images/2005/logo_print.gif"></div>
 	</div>
 
   <div id="mainwrapper">
 
-	 <div id="topnav">
+<div id="topnav">
 		<ul>
-			<li class="first"><a href="/about/" onmouseover="MM_showHideLayers('aboutmenu','','show')" onmouseout="MM_showHideLayers('aboutmenu','','hide')">About Us</a></li>
-			<li><a href="/membership/" onmouseover="MM_showHideLayers('membermenu','','show')" onmouseout="MM_showHideLayers('membermenu','','hide')">Membership</a></li>
-			<li><a href="/hr/iata">Careers</a></li>
-			<li><a href="/workgroups/">Work Groups</a></li>
-			<li><a href="/whatwedo/" onmouseover="MM_showHideLayers('wwdmenu','','show')" onmouseout="MM_showHideLayers('wwdmenu','','hide')">What We Do</a></li>
-			<li><a href="/ps/" onmouseover="MM_showHideLayers('psmenu','','show')" onmouseout="MM_showHideLayers('psmenu','','hide')">Products &amp; Services</a></li>
-			<li class="last"><a href="pressroom.htm" onmouseover="MM_showHideLayers('pressmenu','','show')" onmouseout="MM_showHideLayers('pressmenu','','hide')">Pressroom</a></li>
+			<li class="first">
+				<a href="/about/" onmouseover="MM_showHideLayers('aboutmenu','','show')" onmouseout="MM_showHideLayers('aboutmenu','','hide')">
+					About Us</a>
+			</li><li>
+				<a href="/membership/" onmouseover="MM_showHideLayers('membermenu','','show')" onmouseout="MM_showHideLayers('membermenu','','hide')">
+					Membership</a>
+			</li><li>
+				<a href="/workgroups/">Work Groups</a>
+			</li><li>
+				<a href="/whatwedo/" onmouseover="MM_showHideLayers('wwdmenu','','show')" onmouseout="MM_showHideLayers('wwdmenu','','hide')">
+					What We Do</a>
+			</li><li>
+				<a href="/ps/" onmouseover="MM_showHideLayers('psmenu','','show')" onmouseout="MM_showHideLayers('psmenu','','hide')">
+					Products &amp; Services</a>
+			</li><li><a href="/events/" onmouseover="MM_showHideLayers('eventsmenu','','show')" onmouseout="MM_showHideLayers('eventsmenu','','hide')">Events</a></li>
+			<li><a href="/training/" onmouseover="MM_showHideLayers('trainingmenu','','show')" onmouseout="MM_showHideLayers('trainingmenu','','hide')">Training</a></li>
+			<li class="last">
+				<a href="/pressroom.htm" onmouseover="MM_showHideLayers('pressmenu','','show')" onmouseout="MM_showHideLayers('pressmenu','','hide')">
+					Pressroom</a></li>
+		</ul>
+	</div>	
+	
+	<div id="SubNavBar">
+		<ul class="SubNav">
+			<li class="first"><a href="/worldwide/">IATA by Region</a></li>
+			<li class="item"><a href="/hr/careers">Careers</a></li>
+			<li class="item"><a href="/customer_service/">Customer Service</a></li>
 		</ul>
 	</div>
 	
@@ -221,7 +271,9 @@
 			<div id="rightcol"> <!-- container -->
 				<div id="rightbuttons">
 
-						<div class="bookmark">
+						<div class="SiteName">Home</div>
+<div class="dotted" style="background-position: top;"></div>
+<div class="bookmark">
 	<a href="javascript:addbookmark('http://www.iata.org/privacy.htm', 'IATA - Privacy Policy');" target="_self" title="Add to your Favorites">Bookmark this page</a>						
 </div>
 <div class="send">
