--- a/p/pa/pal/paloalto.com.html
+++ b/p/pa/pal/paloalto.com.html
@@ -1,7 +1,165 @@
-<!--The following is the downloaded HTML source of the paloalto.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230083900id_/http%3A//www.paloalto.com/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paloalto.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023224id_/http%3A//paloalto.com/privacy.cfm) for the most accurate reproduction.-->
 
-<html><head>
+<html><head><script type="text/javascript" src="/common/share/js/objectScript.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script language="JavaScript" type="text/javascript">
+<!--
+// -----------------------------------------------------------------------------
+// Globals
+// Major version of Flash required
+var requiredMajorVersion = 8;
+// Minor version of Flash required
+var requiredMinorVersion = 0;
+// Minor version of Flash required
+var requiredRevision = 0;
+// the version of javascript supported
+var jsVersion = 1.0;
+// -----------------------------------------------------------------------------
+// -->
+</script>
+<script language="VBScript" type="text/vbscript">
+<!-- // Visual basic helper required to detect Flash Player ActiveX control version information
+Function VBGetSwfVer(i)
+  on error resume next
+  Dim swControl, swVersion
+  swVersion = 0
+  
+  set swControl = CreateObject("ShockwaveFlash.ShockwaveFlash." + CStr(i))
+  if (IsObject(swControl)) then
+    swVersion = swControl.GetVariable("$version")
+  end if
+  VBGetSwfVer = swVersion
+End Function
+// -->
+</script>
+<script language="JavaScript1.1" type="text/javascript">
+<!-- // Detect Client Browser type
+var isIE  = (navigator.appVersion.indexOf("MSIE") != -1) ? true : false;
+var isWin = (navigator.appVersion.toLowerCase().indexOf("win") != -1) ? true : false;
+var isOpera = (navigator.userAgent.indexOf("Opera") != -1) ? true : false;
+jsVersion = 1.1;
+// JavaScript helper required to detect Flash Player PlugIn version information
+function JSGetSwfVer(i){
+	// NS/Opera version >= 3 check for Flash plugin in plugin array
+	if (navigator.plugins != null && navigator.plugins.length > 0) {
+		if (navigator.plugins["Shockwave Flash 2.0"] || navigator.plugins["Shockwave Flash"]) {
+			var swVer2 = navigator.plugins["Shockwave Flash 2.0"] ? " 2.0" : "";
+      		var flashDescription = navigator.plugins["Shockwave Flash" + swVer2].description;
+			descArray = flashDescription.split(" ");
+			tempArrayMajor = descArray[2].split(".");
+			versionMajor = tempArrayMajor[0];
+			versionMinor = tempArrayMajor[1];
+			if ( descArray[3] != "" ) {
+				tempArrayMinor = descArray[3].split("r");
+			} else {
+				tempArrayMinor = descArray[4].split("r");
+			}
+      		versionRevision = tempArrayMinor[1] > 0 ? tempArrayMinor[1] : 0;
+            flashVer = versionMajor + "." + versionMinor + "." + versionRevision;
+      	} else {
+			flashVer = -1;
+		}
+	}
+	// MSN/WebTV 2.6 supports Flash 4
+	else if (navigator.userAgent.toLowerCase().indexOf("webtv/2.6") != -1) flashVer = 4;
+	// WebTV 2.5 supports Flash 3
+	else if (navigator.userAgent.toLowerCase().indexOf("webtv/2.5") != -1) flashVer = 3;
+	// older WebTV supports Flash 2
+	else if (navigator.userAgent.toLowerCase().indexOf("webtv") != -1) flashVer = 2;
+	// Can't detect in all other cases
+	else {
+		
+		flashVer = -1;
+	}
+	return flashVer;
+} 
+// When called with reqMajorVer, reqMinorVer, reqRevision returns true if that version or greater is available
+function DetectFlashVer(reqMajorVer, reqMinorVer, reqRevision) 
+{
+ 	reqVer = parseFloat(reqMajorVer + "." + reqRevision);
+   	// loop backwards through the versions until we find the newest version	
+	for (i=25;i>0;i--) {	
+		if (isIE && isWin && !isOpera) {
+			versionStr = VBGetSwfVer(i);
+		} else {
+			versionStr = JSGetSwfVer(i);		
+		}
+		if (versionStr == -1 ) { 
+			return false;
+		} else if (versionStr != 0) {
+			if(isIE && isWin && !isOpera) {
+				tempArray         = versionStr.split(" ");
+				tempString        = tempArray[1];
+				versionArray      = tempString .split(",");				
+			} else {
+				versionArray      = versionStr.split(".");
+			}
+			versionMajor      = versionArray[0];
+			versionMinor      = versionArray[1];
+			versionRevision   = versionArray[2];
+			
+			versionString     = versionMajor + "." + versionRevision;   // 7.0r24 == 7.24
+			versionNum        = parseFloat(versionString);
+        	// is the major.revision >= requested major.revision AND the minor version >= requested minor
+			if ( (versionMajor > reqMajorVer) && (versionNum >= reqVer) ) {
+				return true;
+			} else {
+				return ((versionNum >= reqVer && versionMinor >= reqMinorVer) ? true : false );	
+			}
+		}
+	}	
+}
+// -->
+</script>
+
+
+	
+
+
 
 
 
@@ -111,6 +269,7 @@ window.open("/common/share/im/paloaltosoftware_form.html?"+document.URL,"Getting
 
 
 <script src="/u/MenuScript.js"></script> 
+<script src="/common/libraries/javascript/master.js"></script>
 
 <!-- 8512c365277a442d72faa65ec1e0fa83b3423cd4 --> 
 </head>
@@ -167,10 +326,10 @@ HREF="/common/share/im/offhours.cfm" target="_blank"><img src="/common/share/im/
 													<a href="/ps/" class="TopNavTextLarge" id="Text_menuheader_1">&nbsp;&nbsp;Products&nbsp;&nbsp;</a>
 													<div id="menuitem_1" class="GroupMenuDIVWrapper" nowrap="">
 														<div class="ProdMenuItemTop" id="link_bp" onmouseover="fnhighlight(this);" onmouseout="fnhighlightout(this)">
-															<a href="/ps/bp/?bpedition=bpp" id="Text_link_bp" class="MenuText">Business Plan Pro</a>
+															<a href="/ps/bp/index.cfm" id="Text_link_bp" class="MenuText">Business Plan Pro</a>
 														</div>
 														<div class="ProdMenuItem" id="link_mp" onmouseover="fnhighlight(this)" onmouseout="fnhighlightout(this)">
-															<a href="/ps/mp/?mpedition=mpp" id="Text_link_mp" class="MenuText">Marketing Plan Pro</a>
+															<a href="/ps/mp/index.cfm" id="Text_link_mp" class="MenuText">Marketing Plan Pro</a>
 														</div>
 														<div class="ProdMenuItem" id="link_ap" onmouseover="fnhighlight(this)" onmouseout="fnhighlightout(this)">
 															<a href="/ps/ap/" id="Text_link_ap" class="MenuText">Advertising Plan Pro</a>
@@ -236,8 +395,9 @@ HREF="/common/share/im/offhours.cfm" target="_blank"><img src="/common/share/im/
 															<a href="https://secure.paloalto.com/store/nonprofitorder.cfm" id="Text_link_13" class="MenuText">Nonprofit Pricing</a>
 														</div>
 														<div class="ShopMenuItem" id="link_sbdcpricing" onmouseover="fnhighlight(this)" onmouseout="fnhighlightout(this)">
-															<a href="https://secure.paloalto.com/ac/index.cfm?s=sbdc_buy" id="Text_link_sbdc" class="MenuText">SBDC/SCORE Pricing</a>
+															<a href="https://secure.paloalto.com/ac/index.cfm?s=sbdc_buy" id="Text_link_sbdc" class="MenuText">SBDC Pricing</a>
 														</div>
+														
 														<div class="ShopMenuItemBottom" id="bottom2" onmouseover="fnhighlight(this)" onmouseout="fnhighlightout(this)"><img src="/images/spacer.gif" height="1" width="1"></div>																																									
 													</div>
 												</td>
@@ -336,6 +496,9 @@ HREF="/common/share/im/offhours.cfm" target="_blank"><img src="/common/share/im/
 													<div id="menuitem_6" class="GroupMenuDIVWrapper" nowrap="">
 														<div class="AboutUsItemTop" id="link_companybackground" onmouseover="fnhighlight(this);" onmouseout="fnhighlightout(this)">
 															<a href="/pr/company_background.cfm" id="Text_link_35" class="MenuText">Company Background</a>
+														</div>
+														<div class="AboutUsMenuItem" id="link_founderstory" onmouseover="fnhighlight(this);" onmouseout="fnhighlightout(this)">
+															<a href="/pr/index.cfm?s=bio" id="Text_link_35" class="MenuText">Founder's Story</a>
 														</div>
 														<div class="AboutUsMenuItem" id="link_pressinformation" onmouseover="fnhighlight(this)" onmouseout="fnhighlightout(this)">
 															<a href="/pr/paloaltointhepress.cfm" id="Text_link_36" class="MenuText">Press Information</a>
@@ -704,12 +867,8 @@ document.write(a+b+c+b+d);
 
 	
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-90231-1";
-urchinTracker();
-</script>
+
+
 
 
 <!--WEBSIDESTORY CODE HBX1.0 (Universal)-->
@@ -795,7 +954,6 @@ ev1.attr1 = "main";
 
 
 
-
 		
 	
 						
@@ -835,9 +993,9 @@ ev1.attr1 = "main";
 			<br>
 			<div style="padding: 5px 5px 5px 5px;">
 			<a href="http://www.paloalto.co.uk/psuk/bp/"><img src="/common/gifs/unionjack.gif" align="absmiddle" border="0"></a>
-			<a href="http://www.paloalto.co.uk/psuk/bp/">Business Plan Pro UK Edition</a>					
+			<a href="http://www.paloalto.co.uk/software/business_plan_pro/index.cfm">Business Plan Pro UK Edition</a>					
 			</div>
-			<span class="smalltext">Copyright&nbsp;© 2005 Palo Alto Software, Inc. All Rights Reserved.</span>
+			<span class="smalltext">Copyright&nbsp;© 2006 Palo Alto Software, Inc. All Rights Reserved.</span>
 
 			</td>
 			</tr>
