--- a/f/fu/fut/futurequest.net.html
+++ b/f/fu/fut/futurequest.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the futurequest.net privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210111839id_/http%3A//www.futurequest.net/About/Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the futurequest.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023304id_/http%3A//www.futurequest.net/About/Privacy) for the most accurate reproduction.-->
 
 <html><head>
 <style type="text/css">
@@ -15,19 +15,17 @@ td {
 	font-family: Arial, Verdana, Sans-Serif;
 	font-size: 10pt;
 }
-a:link {
+a:link, a:visited {
 	color: #0000FF;
 	font-weight: normal;
 	text-decoration: underline;
+	background-color: transparent;
 }
-a:visited {
-	color: #0000FF;
+a:hover, a:active {
+	color: #000;
 	font-weight: normal;
-	text-decoration: none;
-}
-a:hover {
-	color: #0000FF;
 	text-decoration: underline;
+	background-color: #ebebfa;
 }
 
 a.nav:link, a.nav:visited {
@@ -479,7 +477,7 @@ If a parent or guardian wishes to provide permission for their child to use the 
 
 <center>
 <a class="nav" href="http://www.redcross.org/" target="_blank" title="Help Please"><font color="#CCCCFF">Help the Healing</font></a>
-<br><br><a class="nav" href="http://www.FutureQuest.net/About/Copyright/" title="Copyright &amp; Trademark Notice"><font color="#CCCCFF">Copyright © 1998-2005 FutureQuest, Inc. All rights reserved.</font></a></center>
+<br><br><a class="nav" href="http://www.FutureQuest.net/About/Copyright/" title="Copyright &amp; Trademark Notice"><font color="#CCCCFF">Copyright © 1998-2006 FutureQuest, Inc. All rights reserved.</font></a></center>
 <br><br>
 
 <div id="dropmenu0" style="position:absolute;left:0;top:0;layer-background-color:#7C7497;background-color:#44385C;width:125;visibility:hidden;border:1px solid black;padding:5px">
