--- a/c/ce/cem/cemex.com.html
+++ b/c/ce/cem/cemex.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cemex.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212140112id_/http%3A//www.cemex.com/gl/gl_pp.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cemex.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023533id_/http%3A//www.cemex.com/gl/gl_pp.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>CEMEX | PRIVACY POLICY</title>
@@ -9,6 +9,7 @@
 <meta name="key words" content="CEMEX">
 
 <link rel="stylesheet" href="/styles/global.css" type="text/css">
+<script src="/library/AC_RunActiveContent.js" type="text/javascript"></script>	
 
 	
 <script language="javascript">
@@ -37,7 +38,7 @@ function SU_openBrWindow(theURL,winName,features) { //v2.0
 	<td height="76" valign="middle" width="315" bgcolor="#ffffff" nowrap="">
       <table width="100" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr>
-          <td><a href="/index.asp"><img src="/images/global/cemex_logo_hp.gif" alt="" border="0"></a></td>
+          <td><a href="/index.asp"><img src="/images/global/logo_CX100ENG.gif" alt="" width="245" height="76" border="0"></a></td>
         </tr>
       </tbody></table>
     </td>
@@ -64,10 +65,13 @@ function SU_openBrWindow(theURL,winName,features) { //v2.0
 <!--end second navigation-->
 	 <table background="/IMAGES/global/fondomenu.gif" border="0" width="100%" height="53" cellpadding="0" cellspacing="0" bgcolor="#023185">
  <tbody><tr>
- <td valign="top"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="775" height="17">
+ <td valign="top"><script type="text/javascript">
+AC_FL_RunContent('codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','775','height','17','src','/flash/m_menu','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','/flash/m_menu');
+</script><object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="775" height="17" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"><param name="movie" value="/flash/m_menu.swf"> <param name="quality" value="high"> <embed width="775" height="17" src="/flash/m_menu.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"></object>
+<noscript><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="775" height="17">
   <param name="movie" value="/flash/m_menu.swf">
   <param name="quality" value="high">
-  <embed src="/flash/m_menu.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="775" height="17"></object></td>
+  <embed src="/flash/m_menu.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="775" height="17"></embed></object></noscript></td>
  </tr>
  </tbody></table>
  <table width="100%" height="74" border="0" cellpadding="0" cellspacing="0" bgcolor="#023185">
@@ -140,7 +144,7 @@ If you have questions or concerns regarding this privacy statement, please conta
 <br><br>
 <table width="100%" cellpadding="0" cellspacing="0" border="0"> 
 	<tbody><tr><td width="50"><img src="/images/global/clear.gif" width="50" height="1" border="0"></td>
-			<td class="allSmall"><a href="/gl/gl_pp.asp">Privacy Policy</a> | <a href="/gl/gl_tu.asp">Terms and conditions</a> | <font color="#666666">Copyright © 2005 CEMEX S.A. DE C.V. All rights reserved</font></td></tr>
+			<td class="allSmall"><a href="/gl/gl_pp.asp">Privacy Policy</a> | <a href="/gl/gl_tu.asp">Terms and conditions</a> | <font color="#666666">Copyright © 2006 CEMEX S.A. DE C.V. All rights reserved</font></td></tr>
 </tbody></table>			
 <!--END footer-->	
 
