--- a/l/li/lil/lilengine.com.html
+++ b/l/li/lil/lilengine.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lilengine.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231160800id_/http%3A//lilengine.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lilengine.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023552id_/http%3A//lilengine.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title> 
@@ -50,6 +50,22 @@ Li'l Engine Privacy Policy</title>
 <a href="/search-engine-promotion/robots.txt/" title="Robots.txt" class="nav">Robots.txt</a> 
 <br>
 <br>
+<script type="text/javascript"><!--
+google_ad_client = "pub-6811628779299912";
+google_ad_width = 160;
+google_ad_height = 90;
+google_ad_format = "160x90_0ads_al";
+google_ad_channel ="9553551801";
+google_color_border = "244C99";
+google_color_bg = "244C99";
+google_color_link = "FBBB4A";
+google_color_url = "006633";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script><br>
+<br>
+
 <a href="/google-search-engine/" title="Google Search Engine" class="navtitle">Google Search Engine</a><br>
 <a href="/google-search-engine/google/" title="Google Search Engine" class="nav">Googles Search Engine</a><br>
 <a href="/google-search-engine/google-base/" title="Google Base" class="nav">Google Base</a><br>
@@ -87,7 +103,6 @@ Li'l Engine Privacy Policy</title>
 <a href="/articles4u.php" title="Article Feed" class="nav">Article Feeds</a><br>
 <br>
 <span class="navtitle">Useful Resources</span><br> 
-<a href="http://www.stepforth.com" target="_blank" class="nav">Search Engine Placement</a><br>
 <a href="http://www.webuildpages.com" target="_blank" class="nav">Internet Marketing</a><br>
 <a href="http://directory.web-page-optimization.com/" target="_blank" class="nav">SEO Company</a><span class="nav"> List</span><br>
 <a href="http://www.isp-guide.com" class="nav">Web Hosting Directory</a><br>
@@ -95,6 +110,7 @@ Li'l Engine Privacy Policy</title>
 <a href="http://www.webmasterschannel.com" target="_blank" class="nav">Webmaster Resources</a><br>
 <a href="http://www.f-w-r.com" target="_blank" class="nav">Free Webmaster Resources</a><br>
 <a href="http://www.text-link-ads.com" target="_blank" class="nav">Buy Text Links. Text Ads.</a><br>
+
 <br>
 <br>
 
@@ -106,11 +122,11 @@ google_ad_client = "pub-6811628779299912";
 google_ad_width = 728;
 google_ad_height = 90;
 google_ad_format = "728x90_as";
-google_ad_type = "text";
-google_ad_channel ="8062068576";
+google_ad_type = "text_image";
+google_ad_channel ="3518849345";
 google_color_border = "f4f4f4";
-google_color_bg = "ffffcc";
-google_color_link = "000000";
+google_color_bg = "FFFFFF";
+google_color_link = "003399";
 google_color_url = "006633";
 google_color_text = "000000";
 //--></script>
@@ -118,7 +134,7 @@ google_color_text = "000000";
 </script>        </div></td>
   </tr>
   <tr> 
-    <td width="651" valign="top" class="content">
+    <td width="651" valign="top" class="content"><div class="KonaBody">
 <h1>Privacy Policy</h1>
     Our Privacy Policy is designed to assist you in understanding how we collect and use the personal information you provide to us and to assist you in making informed decisions when using our site and our products and services. 
     <p></p>
@@ -142,7 +158,7 @@ google_color_text = "000000";
 <p><strong>Notice of New Services and Changes</strong> <br>
   Occasionally, we may also use the information we collect to notify you about important changes to our Web site, new services and special offers we think you will find valuable. As our customer, you will be given the opportunity to notify us of your desire not to receive these offers by sending us an email request at info at LilEngine.com </p>
 	      
-</td>
+</div></td>
     <td width="160" valign="top"><div id="rightnav">
 			<script language="JavaScript" type="text/javascript" src="http://ads.lilengine.com/adserve/adx.js"></script>
 <script language="JavaScript" type="text/javascript">
@@ -158,7 +174,7 @@ google_color_text = "000000";
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://ads.lilengine.com/adserve/adjs.php?n=082711283&amp;what=zone:75&amp;exclude=,"></script><noscript><a href='http://ads.lilengine.com/adserve/adclick.php?n=acebf0ed' target='_blank'><img src='http://ads.lilengine.com/adserve/adview.php?what=zone:75&amp;n=acebf0ed' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://ads.lilengine.com/adserve/adjs.php?n=509855711&amp;what=zone:75&amp;exclude=,"></script><noscript><a href='http://ads.lilengine.com/adserve/adclick.php?n=acebf0ed' target='_blank'><img src='http://ads.lilengine.com/adserve/adview.php?what=zone:75&amp;n=acebf0ed' border='0' alt=''></a></noscript>
 <br>
 <br>
 <script type="text/javascript"><!--
@@ -167,8 +183,8 @@ google_ad_width = 160;
 google_ad_height = 600;
 google_ad_format = "160x600_as";
 google_ad_type = "text_image";
-google_ad_channel ="8062068576";
-google_color_border = "f4f4f4";
+google_ad_channel ="6157232066";
+google_color_border = "597EC6";
 google_color_bg = "FFFFFF";
 google_color_link = "003399";
 google_color_url = "006633";
@@ -181,7 +197,13 @@ google_color_text = "000000";
 <table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="15" bgcolor="006699"><font color="#FFFFFF" size="1" face="verdana"><b>&nbsp;Developer Tutorials</b></font></td></tr></tbody></table><script language="JavaScript" src="http://www.developertutorials.com/articles-js.php"></script><br>
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="15" bgcolor="006699"><font color="#FFFFFF" size="1" face="verdana"><b>&nbsp;Developer News</b></font></td></tr></tbody></table><script language="JavaScript" src="http://www.developertutorials.com/news-js.php"></script>
-
+<script language="JavaScript">
+var dc_UnitID = 14;
+var dc_PublisherID = 3869;
+var dc_AdLinkColor = '003399';
+var dc_adprod='ADL';
+</script>
+<script language="JavaScript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js"></script>
 	</div></td>
   </tr>
 </tbody></table>
