--- a/s/sh/shs/shsu.edu.html
+++ b/s/sh/shs/shsu.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shsu.edu privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212141701id_/http%3A//www.shsu.edu/administrative/policies/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shsu.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023855id_/http%3A//www.shsu.edu/administrative/policies/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//w3c//dtd html 4.0 transitional//en"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -111,7 +111,7 @@ p {
 
 
 
-<b>Local time is:</b> &nbsp;Monday, 12-Dec-2005 08:18:43 CST<br>
+<b>Local time is:</b> &nbsp;Wednesday, 14-Jun-2006 21:38:55 CDT<br>
 
 <b>Last modified:</b> &nbsp;Friday, 23-Jul-2004 10:18:50 CDT<br>
 <b>Maintained by the</b> [<a href="http://www.shsu.edu/~ucs_www/" target="_top">Computer 
