--- a/w/we/wei/weirdspot.com.html
+++ b/w/we/wei/weirdspot.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the weirdspot.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219142500id_/http%3A//www.weirdspot.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the weirdspot.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023954id_/http%3A//weirdspot.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
