createblog.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 6354,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 9.86,
  "homepage_snapshot_redirected_domain": "createblog.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060404230310id_/http://www.createblog.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060404230310id_/http%3A//createblog.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "createblog.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615024648id_/http%3A//www.createblog.com/privacy.php",
  "policy_title": "CreateBlog.com / Privacy policy",
  "policy_url": "createblog.com/privacy.php",
  "sha1": "3b209a361d95be095c357caf2045b05bcaf8e695",
  "simhash": 13096220669384374331,
  "simhash_updated": false,
  "site_hostname": "createblog.com",
  "site_url": "http://createblog.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615024648",
  "word_count": 973,
  "year": 2006
}

--- a/c/cr/cre/createblog.com.html
+++ b/c/cr/cre/createblog.com.html
@@ -1,168 +1,239 @@
-<!--The following is the downloaded HTML source of the createblog.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219120455id_/http%3A//www.createblog.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the createblog.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024648id_/http%3A//www.createblog.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
-<title>createBlog.com: Privacy policy</title>
-<link rel="stylesheet" href="http://www.createblog.com/style.css">
-</head>
-
-<body>
-
-<div id="container">
-
-<table width="728" cellpadding="0" cellspacing="0">
-<tbody><tr>
-<td>
-
-<div id="login">
-<a href="http://www.createblog.com/forums/index.php?act=Reg&amp;CODE=00">Register</a> · <a href="http://www.createblog.com/help.php">Help</a></div>
-
-<div id="header">
-<a href="/"><img src="/images/logo.gif" border="0" alt="createBlog.com"></a>
-</div>
-
-<div id="menu">
-<a href="http://www.createblog.com/skins">layouts</a> - 
-<a href="http://www.createblog.com/forums/index.php?showforum=3">scripts</a> - 
-<a href="http://www.createblog.com/forums/index.php?showforum=18">tutorials</a> - 
-<a href="http://www.createblog.com/forums">forums</a> - 
-<a href="http://www.createblog.com/topsite">topsite</a> - 
-<a href="http://www.createblog.com/skins/submit.php">submit!</a>
-</div>
-
-<div id="banner">
-
-
-	<a href="http://www.createblog.com/forums/index.php?showtopic=77535"><img src="/images/banner.gif" width="728" height="90" border="0"></a>
-
-
-</div>
-
-
-
-<div id="panel">
-<table cellpadding="0" cellspacing="0">
-<tbody><tr><td nowrap="nowrap" width="200" class="smalltext" style="padding-right:10px;border-right:1px solid #ccc;">
-
-	<form method="post" action="http://www.createblog.com/login.php?">
-	<input type="hidden" name="referer" value="/privacy.php">
-
-	Username<br>
-	<input type="text" name="username" value="" size="20" maxlength="32" class="smalltext"><br><br>
-
-	Password<br>
-	<input type="password" name="password" value="" size="20" maxlength="32" class="smalltext">	
-	<input type="submit" name="login" value="Log in" class="button">
+	<title>
+	CreateBlog.com / Privacy policy	</title>
+	<link rel="stylesheet" href="http://www.createblog.com/style.css">
+	</head>
 	
-	</form>	
+	<body>
+	
+	<div id="container">
 
-	</td><td style="padding-left:10px;">
-createBlog.com is a community driven website for blog users. At createBlog.com, we strive to bring you the very best of the blogging community. So what are you waiting for, <a href="http://www.createblog.com/forums/index.php?act=Reg&amp;CODE=00">join now</a> and find out what we are all about!
-</td></tr>
-</tbody></table>
-</div>
+			
+		<script type="text/javascript">
+		
+		function show_login_form() {
+			document.getElementById('login').style.display = 'none';
+			document.getElementById('login_form').style.display = 'block';
+		}
+		
+		</script>
+				
+		<div id="login">
+		<a href="javascript:show_login_form();">Login</a> | <a href="http://www.createblog.com/forums/index.php?act=Reg&amp;coppa_user=0&amp;termsread=1&amp;coppa_pass=1&amp;agree_to_terms=1">Register For Free!</a>
+		</div>
+		
+		<div id="login_form">
+		
+		<form action="http://www.createblog.com/login.php" method="post">
+		
+				
+		
+		<input type="hidden" name="referer" value="/privacy.php">
+		<input name="username" maxlength="32" type="text" size="10" onfocus="this.value=&quot;&quot;" value="username">
+		<input name="password" maxlength="32" type="password" size="10" onfocus="this.value=&quot;&quot;" value="password">
+		<input type="submit" value="Login">
+		</form>
+		
+		</div>
+		
+			
+	<div id="header">
+	<table cellspacing="0" cellpadding="2" border="0" width="728" align="center">
+	
+	<tbody><tr valign="bottom">
+	 <td rowspan="3" style="padding-right:20px;padding-left:0px;">
+	 <a href="http://www.createblog.com/"><img src="http://www.createblog.com/images/logo7.gif" border="0"></a>
+	 </td>
+	
+	 <td width="100%" colspan="2" id="header_links" style="padding-top:30px;">
+	 <a href="http://www.createblog.com/layouts/">Layouts</a>&nbsp;&nbsp;<a href="http://www.createblog.com/scripts/">Scripts</a>&nbsp;&nbsp;<a href="http://www.createblog.com/graphics/">Graphics</a>&nbsp;&nbsp;<a href="http://www.createblog.com/tutorials/">Tutorials</a>&nbsp;&nbsp;<a href="http://www.createblog.com/topsite/">Topsite</a>&nbsp;&nbsp;<a href="http://www.createblog.com/stats/">Stats</a>&nbsp;&nbsp;<a href="http://www.createblog.com/forums/">Forums</a>	 
+	 </td>
+	</tr>
+	
+	<tr valign="top">
+	 <td nowrap="nowrap">
+	 
+	 	 <form action="search.php" method="get">
+	 <input name="tag" type="text" size="40" maxlength="20" value="">
+	 <select name="section_id">
+	 		<option value="1">Layouts</option>
+	 		<option value="2">Scripts</option>
+	 		<option value="3">Graphics</option>
+	 		<option value="5">Tutorials</option>
+	 		<option value="6">Topsite</option>
+	 		</select>	 <input type="submit" value="Search">
+	 </form>
+	 </td>
+	 <td width="100%" class="text_small">
+	 <a href="http://www.createblog.com/help.php">How to search</a><br>
+	 <a href="tags.php">Popular tags</a>
+	 </td>
+	</tr>
+	
+	<tr valign="top">
+	 <td class="cell" colspan="2">
+	 Createblog.com is a community driven site. <a href="http://www.createblog.com/contribute.php">Contribute your work!</a>
+	 </td>
+	</tr>
+	
+	</tbody></table>
+	</div>
+	
+		
+	<div class="nav">
+		<div class="nav_text_right" style="float:right;">
+		<span class="nav">&nbsp;</span>		</div>
+	<a href="">Home</a> / 	</div>
+	
+	
+<div id="body">
 
-<div id="content">
+<table width="728" cellpadding="0" cellspacing="0" border="0" align="center">
 
-<div class="content_body">
+<tbody><tr>
+
+<td class="td_content">
+
+<div class="title_big">Privacy policy</div>
+
+</td>
+
+</tr>
+
+<tr>
+
+<td class="td_content">
+
+<div class="cell_cat">
 
 
-<div class="xlargetitle">Privacy policy</div><br><br>
 
+<b>Updated:</b> 18 January, 2006<br><br>
 
-
-<div class="largetitle">Site visits</div>
-Whenever you request a page through your browser, navigation and clickstream data such as:
+<b><i>What This Privacy Policy Covers</i></b>
 
 <ul>
-	<li>your IP address, </li>
-	<li>browser and version, </li>
-	<li>operating system, </li>
-	<li>date and time and </li>
-	<li>the site from which you came</li>
+<li>This privacy policy pertains to the use of the CreateBlog web site at http://www.createblog.com/</li>
+<li>This privacy policy covers how CreateBlog treats personal information that CreateBlog collects and receives. Personal information is information about you that is personally identifiable like your name, address, email address, or phone number.</li>
+<li>Children under 13 are not permitted to use the CreateBlog service, and so this privacy policy makes no provision for children's use of the site.</li>
 </ul>
-
-are stored in a log file and/or database. This information cannot be used to identify specific individuals, and is only used for:
-
-<ul>
-	<li>research and development, </li>
-	<li>anonymous user analysis, and </li>
-	<li>to provide accurate statistics to advertisers in the form of aggregated data. </li>
-</ul>
-
-<br>
-<div class="largetitle">Use of cookies</div>
-
-Cookies are a technology which can be used to provide you with tailored information
-from a Website. A cookie is an element of data that a Website can send to your browser,
-and which your browser may then store on your system. You can set your browser to notify
-you when you receive a cookie. Doing this will allow you to decide on a case-by-case
-basis whether to accept cookies or not. 
 <br><br>
-Cookies on this site are used by ourselves, our ad management system, and occasionally by
-advertisers who use 3rd party ad serving solutions. Cookies are used for: 
 
-<ul>
-	<li>ad tracking, </li>
-	<li>customization of content (i.e. not repeating pop-up windows), </li>
-	<li>storing login information, and</li>
-	<li>statistical site-traffic analysis.</li>
-</ul>
 
+
+<div class="cell_title">Information Collection and How it is used</div>
 <br>
-<div class="largetitle">Registering for the forums</div>
-The information collected during the registration process for the createBlog.com
-Community is used to:
+
+<b>General Information</b>
 
 <ul>
-	<li>contact members, </li>
-	<li>customize content based upon user preferences, </li>
-	<li>display member status, and </li>
-	<li>display the date of a member's last visit. </li>
+<li>CreateBlog collects personal information when you register with CreateBlog to use CreateBlog services or to post content on CreateBlog.</li>
+<li>When you register we ask for your email address and certain optional information such as your name, birth date, birth place, gender, biographical information, ICQ/AIM/Yahoo/MSN user name, and personal interests.</li>
+<li>CreateBlog automatically receives and records information on our server logs from your browser, including your IP address, cookie, and the page you request.</li>
+<li>CreateBlog uses information for the following general purposes: products and services provision, identification and authentication, services improvement, contact, research, and anonymous reporting.</li>
 </ul>
 
-Information collected in this process can also be used to prevent banned users from
-re-registering under a different username. The email address will only be seen by
-moderators and administrators if the “Keep your email address viewable to other users
-when you post notes?” option is set to no. Cookies may be sent to your browser to enable
-automatic log-ins upon further visits, as well as for content customization. 
+<b>IP Addresses</b><br><br>
 
-<br><br><br>
-<div class="largetitle">Miscellaneous</div>
-
-Any data collected will be used by ourselves and our agents. createBlog.com hereby
-reserves the right to transfer any data collected in the event of an acquisition,
-full or partial, of the company or its assets.
+IP Addresses are automatically reported by your browser each time you view a web page. Your IP address is stored in our user registration databases when you register with CreateBlog.
 <br><br>
-If you have questions regarding our privacy policies, or require assistance in
-opting out of our email lists, please contact us at privacy at createblog dot com.
+
+IP addresses may be used for various purposes, including: 
+
+<ul>
+<li>To diagnose or service technology problems reported by our users or engineers that are associated with the IP addresses controlled by a specific web company or ISP.</li>
+<li>To tailor advertising based on geographic area or other information derived from your IP address. Aggregate information derived from IP addresses may also be reported to advertisers.</li>
+<li>To estimate the total number of users visiting CreateBlog from specific geographical regions.</li>
+<li>To make sure that people are not voting for themselves or friends during contests or promotions.</li>
+</ul>
+
+<b>Cookies</b><br><br>
+
+A cookie is a small amount of data, which often includes an anonymous unique identifier, that is sent to your browser from a web site's computers and stored on your computer's hard drive.
+
+<ul>
+<li>You can configure your browser to accept all cookies, reject all cookies, or notify you when a cookie is set.</li>
+<li>If you reject all cookies, you will not be able to use CreateBlog products or services that require you to "sign in," and you may not be able to take full advantage of the CreateBlog service.</li>
+<li>CreateBlog uses its own cookies for a number of purposes, including to:<br>
+o Access your information when you "sign in".<br>
+o Keep track of preferences you specify while you are using CreateBlog's services.<br>
+o Display the most appropriate advertising banners, based on your interests and activity on CreateBlog.<br>
+o Estimate and report our total audience size and traffic.<br>
+o Conduct research to improve CreateBlog's content and services.</li>
+<li>CreateBlog lets other companies (such as Google) that show advertisements on some of our pages set and access their cookies on your computer. Other entities' use of their cookies is subject to their own privacy policies, not this one. Advertisers or other entities do not have access to CreateBlog's cookies.</li>
+</ul>
+<br><br>
+
+
+
+<div class="cell_title">Information Sharing and Disclosure</div>
+
+<ul>
+<li>When you post a message, your CreateBlog ID or alias that you are posting under is visible to other users.</li>
+<li>If you post personal information online that is accessible to the public, you may receive unsolicited messages from other parties in return. CreateBlog does not rent or sell your personal information.</li>
+<li>Generally, CreateBlog does not share personal information about you with other people or nonaffiliated companies without your consent except to provide products or services you've requested and in the following circumstances: 
+<ul><li>CreateBlog may be required to disclose personally identifiable information under special circumstances, such as to comply with subpoenas, warrants, court orders or legal process or to establish or exercise our legal rights or defend against legal claims;</li></ul></li>
+<li>It may be necessary to share information in order to investigate, prevent, or take action regarding suspected or actual illegal activities, including without limitation, fraud, situations involving potential threats to the physical safety of any person, violations of CreateBlog's terms of use, or as otherwise permitted or required by law. We will transfer information about you if CreateBlog is acquired by or merged with another company. CreateBlog may share demographic information with business partners, such as "53% of users who regularly user CreateBlog chat are between 18 and 24" or the like. No personally identifiable information will ever be used without your permission (i.e. we will ask you for a quote or testimonial)</li>
+<li>CreateBlog displays targeted advertisements based on personal information that is exhibited in people's profiles. This may sometimes make you laugh, as when it shows advertisements for rabbit feed on the profile page of a person whose handle is "BunnyLove." When you register with us, your personal information and other data will be stored and processed in Canada and the United States and this information may be subject to the laws of these jurisidictions.</li>
+</ul>
+<br><br>
+
+<div class="cell_title">Editing and Deleting Account Information. Security.</div>
+
+<ul>
+<li>You can change your CreateBlog Account Information, at any time.</li>
+<li>We may send you certain communications relating to the CreateBlog service, such as service announcements and administrative messages, that are considered part of your CreateBlog account.</li>
+<li>You can delete your CreateBlog account at any time by emailing to admin at createblog dot com.</li>
+<li>Your CreateBlog Account Information is password-protected.</li>
+</ul>
+<br><br>
+
+
+<div class="cell_title">Changes to this Privacy Policy</div>
+<br>
+
+CreateBlog may update this policy at any time for any reason. If there are any significant changes to how we handle personal information we will send a notice to the primary email address specified in your CreateBlog account or by placing a prominent notice on our site.
+<br><br>
+If you have questions or suggestions please contact us at privacy at createblog dot com.
 
 
 
 
-</div>
-
-</div>
-
-
-
-
-
-<div id="footer">
-<div class="largetext">©2005 createblog.com</div>
-<a href="http://www.createblog.com">Home</a> - 
-<a href="http://www.createblog.com/terms.php">Terms of use</a> - 
-<a href="http://www.createblog.com/privacy.php">Privacy policy</a> - 
-<a href="http://www.createblog.com/aboutus.php">About us</a>
-<img src="http://stats.big-boards.com/f/963.png" style="width:0px; height:0px; border:0; visibility:hidden;">
 </div>
 
 </td>
+
 </tr>
+
 </tbody></table>
 
 </div>
 
+	
+	<div class="nav">
+		<div class="nav_text_right" style="float:right;">
+		<span class="nav">&nbsp;</span>		</div>
+	<a href="">Home</a> / 	</div>
+	
+		<div id="footer">
 
-
-</body></html>
+	<div style="float:right;">
+	<a href="http://www.createblog.com/help.php">Help</a> | 
+	<a href="http://www.createblog.com/aboutus.php">About Us</a> | 
+	<a href="http://www.createblog.com/contactus.php">Contact Us</a> | 
+	<a href="http://www.createblog.com/terms.php">Terms of Use</a> | 
+	<a href="http://www.createblog.com/privacy.php">Privacy Policy</a>
+	</div>
+	
+	© 2006 CreateBlog.com, All rights reserved.
+	</div>
+	
+	</div>
+	
+	
+	
+	
+	</body></html>
